--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ body{
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
 }
+.container-fluid {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
 /* styling menu icon */
 .nav-menu{
     border: none;
